<resources>
    <string name="app_name">StoryApp</string>
    <string name="error_password">Password cannot be less than 6.</string>
    <string name="password">Password</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_back">Welcome back you\'ve\nbeen missed</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="register_now">Register now</string>
    <string name="not_a_member">Not a member?</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="hello">Hello!</string>
    <string name="signup_to_get_started">Signup to get started</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="name_cannot_be_empty">Name cannot be empty.</string>
    <string name="story">Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please wait</string>
    <string name="success_registration">Success Registration</string>
    <string name="ok">OK</string>
    <string name="camera_fail">Failed to bring up camera.</string>
    <string name="camera_not_allowed">Camera not allowed.</string>
    <string name="failed_take_pictures">Failed to take pictures.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="description">Description…</string>
    <string name="upload">Upload</string>
    <string name="success_uploading">Success Uploading</string>
    <string name="uploading">Uploading</string>
    <string name="failed_upload">Failed to Upload</string>
    <string name="failed_login">Failed to Login</string>
    <string name="failed_registration">Failed to Registration</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="id">ID</string>
    <string name="en">EN</string>
    <string name="retry">Coba Lagi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>