<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.registration.view.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/signup_to_get_started"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.abdanzakialifian.storyapp.utils.CustomEditText
            android:id="@+id/edt_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:focusableInTouchMode="true"
            android:hint="@string/name"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp" />

        <com.abdanzakialifian.storyapp.utils.CustomEditTextEmail
            android:id="@+id/edt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="14dp"
            android:focusableInTouchMode="true"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp" />

        <com.abdanzakialifian.storyapp.utils.CustomEditTextPassword
            android:id="@+id/edt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="14dp"
            android:focusableInTouchMode="true"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/layout_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:indeterminateTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/please_wait"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingVertical="6dp"
                android:paddingStart="6dp"
                android:paddingEnd="3dp"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:padding="6dp"
                android:paddingVertical="6dp"
                android:paddingStart="3dp"
                android:paddingEnd="6dp"
                android:text="@string/sign_in"
                android:textColor="@color/light_purple" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>