<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.upload.view.UploadFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/roboto_regular"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="10"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/upload_animation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/uploading"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>