<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.view.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="7dp"
                android:padding="9dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/profile"
                android:textColor="@color/light_purple"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/en"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/id"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_initial_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_image_rounded"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="AZ" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Abdan Zaki Alifian" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>